Bug 153733 - can not read odt
Summary: can not read odt
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-09 17:27 UTC by Dario Panico
Modified: 2007-12-31 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
File that crashed okular (34.54 KB, application/vnd.oasis.opendocument.text)
2007-12-10 21:43 UTC, Dario Panico
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Panico 2007-12-09 17:27:02 UTC
Version:           sconosciuto (using KDE 3.5.8, Kubuntu (gutsy) 4:3.5.8-0ubuntu3.1)
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.22-14-generic

Odt files are displayed when Filter=All supported files but when opening one... CRASH.
Backtrace:
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 47176208366208 (LWP 23261)]
[KCrash handler]
#5  0x00002ae80ed27765 in raise () from /lib/libc.so.6
#6  0x00002ae80ed291c0 in abort () from /lib/libc.so.6
#7  0x00002ae808e84ff8 in qt_message_output () from /usr/lib/libQtCore.so.4
#8  0x00002ae808e85119 in qFatal () from /usr/lib/libQtCore.so.4
#9  0x00002ae808e8516c in qt_assert_x () from /usr/lib/libQtCore.so.4
#10 0x00002ae812dea470 in Okular::TextDocumentGenerator::loadDocument ()
   from /opt/kde4/lib/libokularcore.so.1
#11 0x00002ae812dd9c0a in Okular::Document::openDocument ()
   from /opt/kde4/lib/libokularcore.so.1
#12 0x00002ae812aedf94 in Part::openFile ()
   from /opt/kde4/lib/kde4/okularpart.so
#13 0x00002ae80a3054ff in KParts::ReadOnlyPart::openUrl ()
   from /opt/kde4/lib/libkparts.so.4
#14 0x00002ae812ae9336 in Part::openUrl ()
   from /opt/kde4/lib/kde4/okularpart.so
#15 0x00000000004090c0 in Shell::openUrl ()
#16 0x0000000000409de5 in Shell::fileOpen ()
#17 0x0000000000409f7d in Shell::qt_metacall ()
#18 0x00002ae808f4d770 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#19 0x00002ae808f4d969 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#20 0x00002ae80d5b99ab in QAction::triggered () from /usr/lib/libQtGui.so.4
#21 0x00002ae80d5bb4b8 in QAction::activate () from /usr/lib/libQtGui.so.4
#22 0x00002ae80d97bea9 in ?? () from /usr/lib/libQtGui.so.4
#23 0x00002ae80d97e64a in QMenu::mouseReleaseEvent ()
   from /usr/lib/libQtGui.so.4
#24 0x00002ae809b1c4c1 in KMenu::mouseReleaseEvent ()
   from /opt/kde4/lib/libkdeui.so.5
#25 0x00002ae80d60d5d9 in QWidget::event () from /usr/lib/libQtGui.so.4
#26 0x00002ae80d979e85 in QMenu::event () from /usr/lib/libQtGui.so.4
#27 0x00002ae80d5c0d51 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#28 0x00002ae80d5c1949 in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0x00002ae809a6c93b in KApplication::notify ()
   from /opt/kde4/lib/libkdeui.so.5
#30 0x00002ae808f3c846 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#31 0x00002ae80d5cbe73 in ?? () from /usr/lib/libQtGui.so.4
#32 0x00002ae80d62637c in ?? () from /usr/lib/libQtGui.so.4
#33 0x00002ae80d624239 in QApplication::x11ProcessEvent ()
   from /usr/lib/libQtGui.so.4
#34 0x00002ae80d652599 in ?? () from /usr/lib/libQtGui.so.4
#35 0x00002ae80f6c4fd3 in g_main_context_dispatch ()
   from /usr/lib/libglib-2.0.so.0
#36 0x00002ae80f6c82dd in ?? () from /usr/lib/libglib-2.0.so.0
#37 0x00002ae80f6c880e in g_main_context_iteration ()
   from /usr/lib/libglib-2.0.so.0
#38 0x00002ae808f63f4e in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#39 0x00002ae80d651e07 in ?? () from /usr/lib/libQtGui.so.4
#40 0x00002ae808f39b31 in QEventLoop::processEvents ()
   from /usr/lib/libQtCore.so.4
#41 0x00002ae808f39c86 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#42 0x00002ae808f3cffc in QCoreApplication::exec ()
   from /usr/lib/libQtCore.so.4
#43 0x00002ae80d5c0928 in QApplication::exec () from /usr/lib/libQtGui.so.4
#44 0x0000000000407b31 in main ()
#0  0x00002ae80ed902b0 in nanosleep () from /lib/libc.so.6
Comment 1 Pino Toscano 2007-12-09 17:34:46 UTC
Cannot reproduce here (okular >= 0.5.94).

Does it happen with every ODT?
Can you please paste the result of
  okular -v
?
Comment 2 Dario Panico 2007-12-10 20:10:17 UTC
It happens with a file named "Vegastrike tutorial.odt"
d***o@d***o-laptop:~/Documenti$ okular -v
Qt: 4.3.2
KDE: 3.97.1 (KDE 4.0 >= 20071206)
okular: 0.5.94
Comment 3 Pino Toscano 2007-12-10 20:21:24 UTC
Can you please attach the document, if possible?
Comment 4 Dario Panico 2007-12-10 21:43:45 UTC
Created attachment 22465 [details]
File that crashed okular
Comment 5 Pino Toscano 2007-12-10 22:04:41 UTC
SVN commit 747032 by pino:

For now, do not consider links whose page cannot be calculated.

BUG: 153733


 M  +2 -1      textdocumentgenerator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=747032