For now, do not consider links whose page cannot be calculated.

BUG: 153733

svn path=/trunk/KDE/kdegraphics/okular/; revision=747032